# spark_sql

./: .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml
notebooks/: cria_db.ipynb
querys/: query_1.sql
querys_book/: testes.sql
tests/: teste copy.ipynb  teste.ipynb
work/: pyproject.toml
